Modified button to test jenkins

--- a/tetris.html
+++ b/tetris.html
@@ -53,7 +53,7 @@
     </div>
     
     <div class="devcontrols">
-      <button id="test1">Test 1</button>
+      <button id="test1">Test 1 (deprecated)</button>
       <button id="test2">Test 2</button>
       <button id="test3">Test 3</button>
     </div>
