Line break... wheee

--- a/tetris.html
+++ b/tetris.html
@@ -66,7 +66,7 @@
         <br />
         Pause Break: Pause the game<br />
         <br />
-        N: New game<br />
+        N: New game<br /><br />
       </p>
     </div>
     
